2008-03-11  Alain Peyrat <aljeux@free.fr>

	* New plugin online_help to display the gforge manual
	as a contextual online help (code moved in plugin).
	
	* New hook 'headermenu' to add a menu in the header top.

2008-03-10  Christian Bayle <bayle@debian.org>
	
	* Removed as much php warning as possible
	* Migrate to util_make_url() and util_make_link()
	* - www/reporting/*,www/pm/*,www/softwaremap/*
	* - www/survey/*,www/stats/*,www/top/*
	* - www/export/*,www/developer/*,www/themes/*
	* - www/frs/*,www/activity/*,www/project/*
	* - www/news/*,www/pm/*,www/people/*,www/docman/*
	* - plugins/*
	* - www/snippet/*,www/include/*,www/admin/*
	* - www/my/*,www/tracker/*,www/search/*
	* introduced $sys_noforcetype to make possible to get rid of /projects
	and /users forcetype

2008-02-28  Roland Mas  <lolando@debian.org>

	* plugins/*: Migrate to util_make_url() and util_make_link().
	* www/forum/*: Ditto.

2008-02-27  Roland Mas  <lolando@debian.org>

	* deb-specific/db-upgrade.pl: Fixed syntax for PostgreSQL 8.3's
	stricter checking.

	* deb-specific/sf-2.6-complete.sql: Fixed a foreign key constraint
	for compatibility with PostgreSQL 8.3.

2008-02-13  Roland Mas  <lolando@debian.org>

	* common/include/Group.class.php: 
	* www/admin/unsubscribe.php: Fixed yet another few undefined
	variable warnings.

2008-02-07  Roland Mas  <lolando@debian.org>

	* www/account/*: Migrate to util_make_url() and util_make_link().

2008-01-19  Roland Mas  <lolando@debian.org>

	* cronjobs/massmail.php: Added missing i18n on the mass mail cron
	script.

2008-01-14  Roland Mas  <lolando@debian.org>

	* www/export/rss20_news.php: Fixed typo that prevented the RSS
	feed from returning any results.

2008-01-13  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class.php: Removed two unused functions.

	* common/include/utils.php: New functions util_make_url and
	util_make_link, whose goal is to provide a central place where URL
	scheme is implemented.