@@ -37,7 +37,7 @@ if ($type=='snippet') {
 	/*
 		Get all the versions of this snippet
 	*/
-	$sql="SELECT users.realname,users.user_name,snippet_version.snippet_version_id,snippet_version.version,snippet_version.post_date,snippet_version.changes ".
+	$sql="SELECT users.realname,users.user_name,users.user_id,snippet_version.snippet_version_id,snippet_version.version,snippet_version.post_date,snippet_version.changes ".
 		"FROM snippet_version,users ".
 		"WHERE users.user_id=snippet_version.submitted_by AND snippet_id='$id' ".
 		"ORDER BY snippet_version.snippet_version_id DESC";
@@ -70,7 +70,7 @@ if ($type=='snippet') {
 				'</td><td>'.
 				util_make_link ('/snippet/download.php?type=snippet&amp;id='.db_result($result,$i,'snippet_version_id'),'<strong>'. db_result($result,$i,'version').'</strong>').'</td><td>'. 
 				date(_('Y-m-d H:i'),db_result($result,$i,'post_date')).'</td><td>'.
-				$GLOBALS['HTML']->createLinkToUserHome(db_result($result, $i, 'user_name'), db_result($result, $i, 'realname')).'</td>'.
+				util_make_link_u (db_result($result, $i, 'user_name'), db_result($result, $i, 'user_id'),db_result($result, $i, 'realname')).'</td>'.
 				'<td style="text-align:center"><a href="'.util_make_url ('/snippet/delete.php?type=snippet&amp;snippet_version_id='.db_result($result,$i,'snippet_version_id')).'">' . html_image("ic/trash.png","16","16",array("border"=>"0")) . '</a></td></tr>';
 
 				if ($i != ($rows - 1)) {
@@ -125,7 +125,7 @@ if ($type=='snippet') {
 	/*
 		Get all the versions of this package
 	*/
-	$sql="SELECT users.realname,users.user_name,snippet_package_version.snippet_package_version_id,".
+	$sql="SELECT users.realname,users.user_name,users.user_id,snippet_package_version.snippet_package_version_id,".
 		"snippet_package_version.version,snippet_package_version.post_date ".
 		"FROM snippet_package_version,users ".
 		"WHERE users.user_id=snippet_package_version.submitted_by AND snippet_package_id='$id' ".
@@ -158,7 +158,7 @@ if ($type=='snippet') {
 			<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($i) .'><td>'.
 			util_make_link ('/snippet/detail.php?type=packagever&amp;id='.db_result($result,$i,'snippet_package_version_id'),'<strong>'.db_result($result,$i,'version').'</strong>').'</td><td>'.
 				date(_('Y-m-d H:i'),db_result($result,$i,'post_date')).'</td><td>'.
-				$GLOBALS['HTML']->createLinkToUserHome(db_result($result, $i, 'user_name'), db_result($result, $i, 'realname')).'</td>'.
+				util_make_link_u (db_result($result, $i, 'user_name'), db_result($result, $i, 'user_id'),db_result($result, $i, 'realname')).'</td>'.
 				'<td style="text-align:center"><a href="'.util_make_url ('/snippet/add_snippet_to_package.php?snippet_package_version_id='.db_result($result,$i,'snippet_package_version_id')).
 				'">' . html_image("ic/pencil.png","20","25",array("border"=>"0")) .
 				'</a> &nbsp; &nbsp; &nbsp; <a href="'.
